--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.19",
+    "loadash": "^1.0.0",
     "node-sass": "^4.13.1",
     "plugin-sass": "0.0.1-security",
     "prop-types": "^15.7.2",
